// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`errors > throws error when argument missing (last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  Name     Type              Default       Environment (1)
                                                          
  age      number             REQUIRED     ✓              
                                                          
       
  NOTES
  ━━━━━
  (1)   Parameters can be passed arguments via environment variables. Command line arguments take precedence. Environment
        variable names are snake cased versions of the parameter name (or its aliases), case insensitive. They must be   
        prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                                         
        → CLI_PARAMETER_AGE="..."                                                                                        
",
  ],
]
`;

exports[`errors > throws error when argument missing (non-last position) 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Missing argument for flag "age".

Here are the docs for this command:


PARAMETERS

  Name     Type              Default       Environment (1)
                                                          
  age      number             REQUIRED     ✓              
                                                          
  name     string             REQUIRED     ✓              
                                                          
       
  NOTES
  ━━━━━
  (1)   Parameters can be passed arguments via environment variables. Command line arguments take precedence. Environment
        variable names are snake cased versions of the parameter name (or its aliases), case insensitive. They must be   
        prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                                         
        → CLI_PARAMETER_AGE="..."                                                                                        
        → CLI_PARAMETER_NAME="..."                                                                                       
",
  ],
]
`;

exports[`errors > validates the  input 1`] = `
[
  [
    "Cannot run command, you made some mistakes:

Invalid argument for parameter: "age". The error was:
Invalid input: expected int, received number

Here are the docs for this command:


PARAMETERS

  Name     Type              Default       Environment (1)
                                                          
  age      number             REQUIRED     ✓              
                                                          
       
  NOTES
  ━━━━━
  (1)   Parameters can be passed arguments via environment variables. Command line arguments take precedence. Environment
        variable names are snake cased versions of the parameter name (or its aliases), case insensitive. They must be   
        prefixed with CLI_PARAMETER_ or CLI_PARAM_ (case insensitive). Examples:                                         
        → CLI_PARAMETER_AGE="..."                                                                                        
",
  ],
]
`;
